# DeathStrandsing

./: .gitignore  README.md  explore_strands.py  pyproject.toml  requirements-lambda.txt  requirements.txt
.kiro/specs/ai-news-agent/: design.md  requirements.md  tasks.md
.kiro/steering/: python-execution-requirements.md
scripts/: build-lambda.sh  deploy-full.sh  deploy-lambda.sh  monitor-system.sh
src/: __init__.py
src/aws_lambda/: __init__.py  handler.py
src/models/: __init__.py  agent_config.py  news_article.py  news_summary.py
src/services/: __init__.py  ai_summarizer.py  aws_sns_publisher.py  google_news_fetcher.py  news_fetcher.py  sns_publisher.py  strands_ai_summarizer.py
terraform/: README.md  backend-dev.hcl  backend-prod.hcl  deploy.sh  main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
terraform/modules/cloudwatch/: dashboard.json  main.tf  outputs.tf  variables.tf
terraform/modules/cost-monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/sns/: main.tf  outputs.tf  variables.tf
tests/: __init__.py
tests/integration/: __init__.py  test_basic_integration.py  test_end_to_end_workflow.py  test_performance_and_memory.py
tests/unit/: __init__.py  test_agent_config.py  test_aws_sns_publisher.py  test_google_news_fetcher.py  test_lambda_handler.py  test_news_article.py  test_news_summary.py  test_relevance_scoring.py  test_security_compliance.py  test_strands_ai_summarizer.py
